--- a/WindowsUIWalla/ManageWalla/WallaStyleDictionary.xaml
+++ b/WindowsUIWalla/ManageWalla/WallaStyleDictionary.xaml
@@ -120,6 +120,7 @@
         <Setter Property="BorderBrush" Value="{StaticResource FontBorderBrush}" />
         <Setter Property="BorderThickness" Value="0" />
         <Setter Property="Padding" Value="0" />
+        <Setter Property="Padding" Value="2" />
     </Style>
 
     <Style x:Key="PhotoListItem" TargetType="{x:Type ListBoxItem}">
